# unifi-homelab-ops

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  Makefile  README.md  docker-compose.e2e.yml  docker-compose.yml
.github/: dependabot.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/versions/: 002_metrics_tables.py  004_rack_tables.py  005_rack_item_width.py  006_rack_item_height_float.py  007_rack_item_position_float.py  008_topology_node_positions.py  009_cabling_tables.py  010_snoozed_devices.py
backend/app/: config.py  database.py  logging.py  main.py  middleware.py  models.py  models_db.py
backend/app/routers/: analyze.py  auth.py  cable.py  documentation.py  health.py  metrics.py  rack_planner.py  rules.py  settings.py  simulate.py  snoozed_devices.py  topology.py  zone_filter.py  zones.py
backend/app/services/: _rule_coverage.py  ai_analyzer.py  ai_settings.py  analyzer.py  anomaly_checker.py  cable_service.py  controller_health.py  documentation.py  firewall.py  firewall_writer.py  metrics.py  metrics_analyzer.py  poller.py  rack_planner.py  simulator.py  site_health.py  snoozed_devices.py  topology.py  topology_positions.py  zone_filter.py
backend/tests/: conftest.py  test_ai_analyzer.py  test_ai_settings.py  test_analyze_router.py  test_analyzer.py  test_anomaly_checker.py  test_auth.py  test_cable_router.py  test_cable_service.py  test_config.py  test_controller_health.py  test_database.py  test_documentation_router.py  test_documentation_service.py  test_firewall_service.py  test_firewall_writer.py  test_logging.py  test_main.py  test_metrics_analyzer.py  test_metrics_router.py  test_metrics_service.py  test_middleware.py  test_poller.py  test_rack_planner_router.py  test_rack_planner_service.py  test_rules.py  test_settings_router.py  test_simulate.py  test_site_health.py  test_snoozed_devices_router.py  test_snoozed_devices_service.py  test_topology_positions.py  test_topology_router.py  test_topology_service.py  test_zone_filter_router.py  test_zone_filter_service.py  test_zones.py
(+182 files in other folders)
