[project]
name = "unifi-homelab-ops"
version = "1.3.0"
description = "UniFi Homelab Ops API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "requests>=2.32.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.18.4",
    "structlog>=25.1.0",
    "unifi-topology>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "anyio>=4.0.0",
    "mypy>=1.14.0",
    "types-requests>=2.32.0",
    "ruff>=0.9.0",
    "radon>=6.0.1",
    "pre-commit>=4.5.1",
]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=98"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
fail_under = 98
